--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,4 +1,4 @@
-name: Deploy to Azure App Service
+name: FTP Deploy to Azure
 
 on:
   push:
@@ -7,7 +7,7 @@ on:
     branches: [ main ]
 
 jobs:
-  build-and-deploy:
+  deploy:
     runs-on: ubuntu-latest
     environment: production
     
@@ -15,29 +15,24 @@ jobs:
     - name: Checkout code
       uses: actions/checkout@v3
 
-    - name: Setup Python
-      uses: actions/setup-python@v4
-      with:
-        python-version: '3.11'
-        
-    - name: Install dependencies
+    - name: List files for verification
       run: |
-        python -m pip install --upgrade pip
-        pip install flask==2.3.0 flask-cors==4.0.0 gunicorn==21.2.0
-
-    - name: List files (for debugging)
-      run: |
+        echo "Project structure:"
         ls -la
-        echo "API folder contents:"
-        ls -la api/ || echo "No API folder"
+        echo "API folder:"
+        ls -la api/ || echo "No API folder found"
 
-    - name: Deploy to Azure Web App
-      uses: azure/webapps-deploy@v2
+    - name: Deploy via FTP
+      uses: SamKirkland/FTP-Deploy-Action@4.3.3
       with:
-        app-name: 'hamzamir-resume-app-gzgwc0d9f2csexgt'
-        publish-profile: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE }}
+        server: ${{ secrets.FTP_SERVER }}
+        username: ${{ secrets.FTP_USERNAME }}
+        password: ${{ secrets.FTP_PASSWORD }}
+        local-dir: ./
+        server-dir: /site/wwwroot/
         
-    - name: Verify deployment
+    - name: Deployment Success
       run: |
-        echo "🎉 Deployment completed successfully!"
-        echo "Your site is live at: https://hamzamir-resume-app-gzgwc0d9f2csexgt.eastasia-01.azurewebsites.net"
+        echo "🎉 Website deployed successfully!"
+        echo "🌐 Visit: https://hamzamir-resume-app-gzgwc0d9f2csexgt.eastasia-01.azurewebsites.net"
+        echo "⏰ Allow 1-2 minutes for changes to propagate"
