--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,9 +1,7 @@
-name: FTP Deploy to Azure
+name: Azure CLI Deploy
 
 on:
   push:
-    branches: [ main ]
-  pull_request:
     branches: [ main ]
 
 jobs:
@@ -15,24 +13,15 @@ jobs:
     - name: Checkout code
       uses: actions/checkout@v3
 
-    - name: List files for verification
-      run: |
-        echo "Project structure:"
-        ls -la
-        echo "API folder:"
-        ls -la api/ || echo "No API folder found"
-
-    - name: Deploy via FTP
-      uses: SamKirkland/FTP-Deploy-Action@4.3.3
+    - name: Azure Login
+      uses: azure/login@v1
       with:
-        server: ${{ secrets.FTP_SERVER }}
-        username: ${{ secrets.FTP_USERNAME }}
-        password: ${{ secrets.FTP_PASSWORD }}
-        local-dir: ./
-        server-dir: /site/wwwroot/
-        
-    - name: Deployment Success
+        creds: ${{ secrets.AZURE_CREDENTIALS }}
+
+    - name: Deploy to Azure App Service
       run: |
-        echo "🎉 Website deployed successfully!"
-        echo "🌐 Visit: https://hamzamir-resume-app-gzgwc0d9f2csexgt.eastasia-01.azurewebsites.net"
-        echo "⏰ Allow 1-2 minutes for changes to propagate"
+        az webapp up \
+          --name hamzamir-resume-app-gzgwc0d9f2csexgt \
+          --resource-group YOUR_RESOURCE_GROUP \
+          --runtime "PYTHON:3.11" \
+          --html
