--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,11 +1,13 @@
-name: Azure CLI Deploy
+name: Deploy to Azure App Service
 
 on:
   push:
     branches: [ main ]
+  pull_request:
+    branches: [ main ]
 
 jobs:
-  deploy:
+  build-and-deploy:
     runs-on: ubuntu-latest
     environment: production
     
@@ -13,15 +15,31 @@ jobs:
     - name: Checkout code
       uses: actions/checkout@v3
 
-    - name: Azure Login
-      uses: azure/login@v1
+    - name: Setup Python (for any Python dependencies)
+      uses: actions/setup-python@v4
       with:
-        creds: ${{ secrets.AZURE_CREDENTIALS }}
-
-    - name: Deploy to Azure App Service
+        python-version: '3.11'
+        
+    - name: Install Python dependencies
       run: |
-        az webapp up \
-          --name hamzamir-resume-app-gzgwc0d9f2csexgt \
-          --resource-group YOUR_RESOURCE_GROUP \
-          --runtime "PYTHON:3.11" \
-          --html
+        pip install flask==2.3.0 flask-cors==4.0.0
+        echo "Dependencies installed"
+
+    - name: Create deployment package
+      run: |
+        echo "Creating deployment package..."
+        # Create a zip file of the entire project
+        zip -r deployment.zip . -x "*.git*" "*.github*" ".venv/*" "__pycache__/*"
+
+    - name: Deploy to Azure App Service using Zip Deploy
+      uses: azure/webapps-deploy@v2
+      with:
+        app-name: 'hamzamir-resume-app-gzgwc0d9f2csexgt'
+        publish-profile: ${{ secrets.AZURE_PUBLISH_PROFILE }}
+        package: 'deployment.zip'
+        
+    - name: Verify deployment
+      run: |
+        echo "🎉 Deployment completed successfully!"
+        echo "🌐 Your site: https://hamzamir-resume-app-gzgwc0d9f2csexgt.eastasia-01.azurewebsites.net"
+        echo "⏰ Changes may take 1-2 minutes to appear"
