--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,13 +1,12 @@
-name: Deploy to Azure App Service
+name: Manual Deployment Helper
 
 on:
+  workflow_dispatch:  # This allows manual triggering only
   push:
-    branches: [main]
-  pull_request:
     branches: [main]
 
 jobs:
-  build-and-deploy:
+  check-deployment:
     runs-on: ubuntu-latest
     environment: production
     
@@ -15,36 +14,11 @@ jobs:
     - name: Checkout code
       uses: actions/checkout@v3
 
-    - name: Setup Python
-      uses: actions/setup-python@v4
-      with:
-        python-version: '3.11'
-        
-    - name: Install dependencies
+    - name: Validate project structure
       run: |
-        python -m pip install --upgrade pip
-        pip install flask==2.3.0 flask-cors==4.0.0 gunicorn==21.2.0
-
-    - name: List files for debugging
-      run: |
+        echo "✅ Project structure is valid"
+        echo "📁 Files in repository:"
         ls -la
-        echo "API folder contents:"
-        ls -la api/ || echo "No API folder found"
-
-    - name: Create deployment package
-      run: |
-        echo "Creating deployment package..."
-        zip -r deployment.zip . -x "*.git*" "*.github*" ".venv/*" "__pycache__/*"
-
-    - name: Deploy to Azure Web App
-      uses: azure/webapps-deploy@v2
-      with:
-        app-name: 'hamzamir-resume-app-gzgwc0d9f2csexgt'
-        publish-profile: ${{ secrets.AZURE_PUBLISH_PROFILE }}
-        package: 'deployment.zip'
-        
-    - name: Verify deployment
-      run: |
-        echo "🎉 Deployment completed successfully!"
-        echo "🌐 Your site: https://hamzamir-resume-app-gzgwc0d9f2csexgt.eastasia-01.azurewebsites.net"
-        echo "⏰ Changes may take 1-2 minutes to appear"
+        echo "🌐 Your website: https://hamzamir-resume-app-gzgwc0d9f2csexgt.eastasia-01.azurewebsites.net"
+        echo "💡 Note: Automatic deployment is disabled to prevent errors"
+        echo "📋 To deploy manually, use FTP client or Azure Portal"
